# voxcpm-api-studio

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  requirements.txt
docs/: pure-voxcpm-service-build.md  voxcpm_zero_dependency_feasibility_review_zh.md  wasm_playground.md
examples/: voxcpm_tts.cpp
scripts/: build_wasm.sh  convert_voxcpm_to_gguf.py  quantize_benchmark.sh
servers/: voxcpm_server.cpp
tests/: test_components.cpp  test_localenc.cpp
wasm/: CMakeLists.txt  voxcpm_wasm.cpp
web/: README.md  a.out.js  package.json  pnpm-lock.yaml
web/playground/: index.html  package.json  rsbuild.config.ts  tsconfig.json
web/playground/src/: App.tsx  index.css
web/playground/src/utils/: audio.ts
web/playground/src/workers/: voxcpm.worker.ts
